Created basic input

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -56,6 +56,7 @@ bAuthorizeAutomaticWidgetVariableCreation=False
 +ActiveGameNameRedirects=(OldGameName="TP_Blank",NewGameName="/Script/Blaster")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_Blank",NewGameName="/Script/Blaster")
 +ActiveClassRedirects=(OldClassName="TP_BlankGameModeBase",NewClassName="BlasterGameModeBase")
+AssetManagerClassName=/Script/Blaster.BlasterAssetManager
 
 [/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
 bEnablePlugin=True
