--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -3,6 +3,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Maps/GameStartupMap.GameStartupMap
 EditorStartupMap=/Game/Maps/GameStartupMap.GameStartupMap
+TransitionMap=/Game/Maps/BlasterTransitionMap.BlasterTransitionMap
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
