--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -97,3 +97,5 @@ bInitServerOnClient=true
 [/Script/OnlineSubsystemSteam.SteamNetDriver]
 NetConnectionClassName="OnlineSubsystemSteam.SteamNetConnection"
 
+[/Script/OnlineSubsystemUtils.IpNetDriver]
+NetServerMaxTickRate = 64
