LineTracing from center of the screen to to end point to spawn the projectile

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -96,4 +96,6 @@ bSkipMovies=False
 +IniSectionDenylist=StorageServers
 +MapsToCook=(FilePath="/Game/Maps/Lobby")
 +MapsToCook=(FilePath="/Game/Maps/GameStartupMap")
++MapsToCook=(FilePath="/Game/Maps/BlasterMap")
++MapsToCook=(FilePath="/Game/Maps/BlasterTransitionMap")
 
