Fixed reference errors

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -3,14 +3,14 @@
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/Blaster/Maps/BlasterMap.BlasterMap
 LocalMapOptions=
-TransitionMap=/Game/Maps/BlasterTransitionMap.BlasterTransitionMap
+TransitionMap=/Game/Blaster/Maps/L_TransitionMap.L_TransitionMap
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
 bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Script/Engine.GameInstance
-GameDefaultMap=/Game/Blaster/Maps/GameStartupMap.GameStartupMap
+GameDefaultMap=/Game/Blaster/Maps/L_StartUpMap.L_StartUpMap
 ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=/Script/Engine.GameModeBase
 GlobalDefaultServerGameMode=None
