Rocket Trail VFX

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,7 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Blaster/Maps/BlasterMap.BlasterMap
+EditorStartupMap=/Game/Blaster/Maps/TestLevel.TestLevel
 LocalMapOptions=
 TransitionMap=/Game/Blaster/Maps/L_TransitionMap.L_TransitionMap
 bUseSplitscreen=True
