--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -12,7 +12,7 @@ bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Script/Engine.GameInstance
 GameDefaultMap=/Game/Blaster/Maps/L_StartUpMap.L_StartUpMap
 ServerDefaultMap=/Engine/Maps/Entry.Entry
-GlobalDefaultGameMode=/Script/Engine.GameModeBase
+GlobalDefaultGameMode=/Game/Blaster/Blueprints/Game/BP_BlasterGameMode.BP_BlasterGameMode_C
 GlobalDefaultServerGameMode=None
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
